--- a/static/main.css
+++ b/static/main.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'terminus';
-  src: url('static/fonts/terminus.eot'),
-       url('static/fonts/terminus.eot?#iefix') format('embedded-opentype'),
-       url('static/fonts/terminus.woff2') format('woff2'),
-       url('static/fonts/terminus.svg#TerminusTTF') format('svg'),
-       url('static/fonts/terminus.woff') format('woff');
+  src: url('fonts/terminus.eot'),
+       url('fonts/terminus.eot?#iefix') format('embedded-opentype'),
+       url('fonts/terminus.woff2') format('woff2'),
+       url('fonts/terminus.svg#TerminusTTF') format('svg'),
+       url('fonts/terminus.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
