--- a/static/main.css
+++ b/static/main.css
@@ -1,3 +1,22 @@
+* {  
+  margin: 0;  
+  padding: 0;
+}
+
 body {
   font-family: 'Roboto Mono', sans-serif;
+  background-color: #002b36
+}
+
+.container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -moz-transform: translateX(-50%) translateY(-50%);
+  -webkit-transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50%) translateY(-50%);
+}
+
+p {
+  color: #839496;
 }
